# agent-forge

./: .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  Dockerfile  MIGRATION.md  README.md  SECURITY.md  STABILITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
contrib/systemd/: README.md  agentforge.service  agentforge@.service
docs/plans/: 2026-06-10-library-refactor.md  2026-06-10-phase-6-multi-tenant.md  2026-06-10-phase-7-observability.md  2026-06-11-phase-8-billing-quota.md  2026-06-11-phase-9-web-dashboard.md
examples/: .gitignore
examples/01-hello-world/: README.md  run.py  workflow.yaml
examples/02-telegram-bot/: README.md  run.py  workflow.yaml
examples/03-discord-bot/: README.md  run.py  workflow.yaml
examples/04-webhook-listener/: README.md  run.py  workflow.yaml
examples/05-multi-tenant-dashboard/: README.md  run.py  workflow.yaml
examples/06-docker-deploy/: Dockerfile  README.md  docker-compose.yml  env.example  nginx.conf
examples/07-workflow-versioning/: README.md  run.py
examples/08-retention-monitor/: README.md  run.py
src/agentforge/: __init__.py  cli.py  mcp.py  serve.py  state.py
tests/unit/: test_billing_plans.py  test_billing_quota.py  test_billing_usage.py  test_cli.py  test_cli_cancel.py  test_cli_runs.py  test_codemirror.py  test_dashboard.py  test_dashboard_overview.py  test_dashboard_overview_ws.py  test_dashboard_polling.py  test_dashboard_ws.py  test_deploy_artifacts.py  test_eventbus.py  test_examples_smoke.py  test_import_safety.py  test_mcp_server.py  test_metrics_page.py  test_otlp.py  (+18 more)
(+66 files in other folders)
