[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge"
version = "0.1.0"
description = "Self-hosted multi-agent orchestration library and daemon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=5.4",
    "aiohttp>=3.9",
    "python-telegram-bot>=20.0",
    "discord.py>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.21"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1"]

[project.scripts]
agentforge = "agentforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
